# matlab-ctl

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  build.sh  buildfile.m
.github/workflows/: ci.yml
buildUtilities/: generateCodeIssuesBadge.m  generateCoverageBadge.m  generateTestedWithBadge.m
buildUtilities/private/: writeBadge.m
docs/: BUILDING.md
examples/: GettingStarted.m
mex/: apply_ctl_mex.cpp
reports/badge/: code_issues.json  coverage.json  tested_with.json
resources/project/: Project.xml
src/: apply_ctl.m  apply_ctl_cache_info.m  get_ctl_signature.m
tests/: alpha_passthrough.ctl  applyCtlTest.m  benchApplyCtl.m  ctlrender_via_disk.m  defaulted_param.ctl  defaulted_uniform_param.ctl  identity.ctl  required_param.ctl  scale2x.ctl
